Project buscasam_dwh {
  database_type: 'PostgreSQL'
  Note: '''
    Datawarehouse BUSCASAM - schema `dwh`.
    Estrella desnormalizada (Kimball). Jerarquia Escuela > Carrera > Materia
    aplanada en dim_materia. Interacciones consolidadas en fact_interaccion_documento.
    Carga incremental diaria via dbt + cron desde PostgreSQL operativo.
  '''
}

// =============================================================
// DIMENSIONES
// =============================================================

// ---------- MATERIA (jerarquia desnormalizada) ----------
// Jerarquia academica aplanada: Escuela > Carrera > Materia.
// Evita JOINs al desnormalizar los tres niveles en una sola tabla.

Table dim_materia [headercolor: #3D5A80] {
  id_materia integer [pk, note: '-1 = No Filtrado (sentinel)']
  nombre_materia varchar(200) [not null, note: 'Nombre de la materia tal como figura en el plan de estudios']
  id_carrera integer [not null, note: 'FK logica a la carrera a la que pertenece la materia']
  nombre_carrera varchar(200) [not null, note: 'Nombre de la carrera (desnormalizado para evitar JOIN)']
  id_escuela integer [not null, note: 'FK logica a la escuela que contiene la carrera']
  nombre_escuela varchar(200) [not null, note: 'Nombre de la escuela (desnormalizado para evitar JOIN)']

  indexes {
    id_escuela [name: 'idx_dim_materia_escuela']
    id_carrera [name: 'idx_dim_materia_carrera']
  }
}

// ---------- TIEMPO ----------
// Calendario pre-poblado. Permite agrupar y filtrar hechos por periodos academicos.

Table dim_tiempo [headercolor: #3D5A80] {
  fecha date [pk, note: 'Fecha calendario (YYYY-MM-DD). Pre-poblada para todo el rango del DWH']
  dia smallint [not null, note: 'Dia del mes (1-31)']
  mes smallint [not null, note: 'Mes del anio (1-12)']
  cuatrimestre smallint [not null, note: 'Cuatrimestre academico (1 = mar-jul, 2 = ago-dic, 0 = verano)']
  anio smallint [not null, note: 'Anio calendario (ej: 2026)']
}

// ---------- ROL Y USUARIO (SCD2) ----------

Table dim_rol [headercolor: #3D5A80] {
  id_rol integer [pk, note: 'Identificador unico del rol']
  nombre varchar(50) [not null, note: 'Tipo de rol en la plataforma: estudiante | docente | invitado']
}

Table dim_usuario [headercolor: #3D5A80] {
  id_usuario_sk integer [pk, note: 'Surrogate key. Cambia con cada version SCD2 del usuario']
  id_usuario_bk integer [not null, note: 'Business key del operativo. 0 = invitado anonimo (sentinel)']
  id_rol integer [not null, ref: > dim_rol.id_rol, note: 'Rol del usuario al momento de esta version']
  id_carrera integer [not null, note: 'Carrera en la que esta inscripto. -1 = No Aplica (invitados)']
  nombre_carrera varchar(200) [not null, note: 'Nombre de la carrera (desnormalizado). "No Aplica" para invitados']
  nombre_escuela varchar(200) [not null, note: 'Escuela a la que pertenece la carrera. "No Aplica" para invitados']
  nombre varchar(200) [note: 'Nombre completo del usuario. NULL si es anonimo']
  email_hash varchar(64) [note: 'Hash SHA-256 del email. Permite vincular sin exponer PII']
  valid_from date [not null, note: 'Inicio de vigencia de esta version del registro (SCD2)']
  valid_to date [note: 'Fin de vigencia. NULL = version vigente (SCD2)']
  is_current boolean [not null, default: true, note: 'true = version activa. Facilita filtro sin comparar fechas']

  indexes {
    (id_usuario_bk, is_current) [name: 'idx_dim_usuario_bk_current']
  }
}

// ---------- DOCUMENTO (SCD2) ----------

Table dim_tipo_documento [headercolor: #3D5A80] {
  id_tipo integer [pk, note: '-1 = No Filtrado (sentinel). Usado en fact_busqueda cuando no se aplico filtro por tipo']
  nombre varchar(50) [not null, note: 'Categoria del documento: tesis | paper | trabajo_practico | proyecto_investigacion | monografia | ponencia | apunte | informe_catedra']
}

Table dim_documento [headercolor: #3D5A80] {
  id_documento_sk integer [pk, note: 'Surrogate key. Cambia con cada version SCD2 del documento']
  id_documento_bk integer [not null, note: 'Business key del operativo. Identifica al documento a lo largo del tiempo']
  id_tipo integer [not null, ref: > dim_tipo_documento.id_tipo, note: 'Tipo/categoria del documento']
  id_materia integer [not null, ref: > dim_materia.id_materia, note: 'Materia a la que pertenece el documento']
  titulo varchar(500) [not null, note: 'Titulo completo del documento']
  fecha_alta date [not null, note: 'Fecha en que el documento fue publicado por primera vez en la plataforma']
  visibilidad varchar(20) [not null, note: 'Nivel de acceso: publico | interno (solo UNSAM) | privado (solo autor)']
  is_deleted boolean [not null, default: false, note: 'Soft delete. true = documento eliminado logicamente']
  deleted_at date [note: 'Fecha de eliminacion logica. NULL si no fue eliminado']
  valid_from date [not null, note: 'Inicio de vigencia de esta version del registro (SCD2)']
  valid_to date [note: 'Fin de vigencia. NULL = version vigente (SCD2)']
  is_current boolean [not null, default: true, note: 'true = version activa. Facilita filtro sin comparar fechas']

  indexes {
    (id_documento_bk, is_current) [name: 'idx_dim_documento_bk_current']
    (is_deleted, is_current) [name: 'idx_dim_documento_deleted_current']
  }
}

// ---------- TIPO DE INTERACCION ----------

Table dim_tipo_interaccion [headercolor: #3D5A80] {
  id_tipo_interaccion integer [pk, note: 'Identificador unico del tipo de interaccion']
  nombre varchar(50) [not null, note: 'Accion del usuario sobre un documento: visualizacion | publicacion | descarga | favorito_agregar | favorito_quitar | comentario']
}



// =============================================================
// BRIDGE
// =============================================================

Table bridge_documento_autor [headercolor: #4A4A4A] {
  id_documento_sk integer [not null, ref: > dim_documento.id_documento_sk, note: 'Version SCD2 del documento']
  id_usuario_sk integer [not null, ref: > dim_usuario.id_usuario_sk, note: 'Version SCD2 del usuario/autor']
  orden smallint [not null, note: 'Posicion del autor. 1 = autor principal / uploader del documento']
  peso numeric(5,4) [not null, note: 'Factor de reparto = 1/N (N = cant. autores). Multiplicar por medidas para evitar doble conteo en agregaciones']

  indexes {
    (id_documento_sk, id_usuario_sk) [pk]
  }
}

// =============================================================
// HECHOS
// =============================================================

// ---------- HECHO: BUSQUEDA ----------

Table fact_busqueda [headercolor: #C8553D] {
  id_busqueda bigint [pk, increment, note: 'Surrogate key autoincremental. Una fila por cada busqueda realizada']
  fecha date [not null, ref: > dim_tiempo.fecha, note: 'Dia en que se realizo la busqueda']
  id_usuario_sk integer [not null, ref: > dim_usuario.id_usuario_sk, note: 'Usuario que ejecuto la busqueda']

  // Filtros aplicados por el usuario al buscar.
  // Usan valores sentinel en lugar de NULL para simplificar JOINs y evitar logica COALESCE.
  id_materia_filtro integer [not null, ref: > dim_materia.id_materia, note: 'Materia seleccionada como filtro. -1 = no filtro por materia']
  id_tipo_documento_filtro integer [not null, ref: > dim_tipo_documento.id_tipo, note: 'Tipo de documento seleccionado como filtro. -1 = no filtro por tipo']
  fecha_desde_filtro date [not null, note: 'Limite inferior del rango de fecha aplicado. 1900-01-01 = sin limite inferior']
  fecha_hasta_filtro date [not null, note: 'Limite superior del rango de fecha aplicado. 9999-12-31 = sin limite superior']

  // Dimension degenerada: se almacena en el fact porque tiene cardinalidad
  // demasiado alta para una dimension propia y rara vez se repite.
  query_texto text [not null, note: 'Texto de busqueda ingresado por el usuario en lenguaje natural']

  // Medidas
  cant_resultados integer [not null, note: 'Cantidad de documentos devueltos por el buscador para esta query']
  hizo_click boolean [not null, note: 'true si el usuario hizo click en al menos un resultado. Mide eficacia de busqueda']
  session_hash varchar(64) [note: 'Hash de sesion anonimizado. Permite agrupar busquedas de una misma sesion']

  indexes {
    fecha [name: 'idx_fact_busqueda_fecha']
    id_materia_filtro [name: 'idx_fact_busqueda_materia']
  }
}

// ---------- HECHO: INTERACCION CON DOCUMENTO (agregado diario) ----------
// Reemplaza: fact_visualizacion, fact_publicacion, fact_descarga, fact_favorito
// Granularidad: una fila por (fecha, usuario, documento, tipo_interaccion)

Table fact_interaccion_documento [headercolor: #C8553D] {
  fecha date [not null, ref: > dim_tiempo.fecha, note: 'Dia en que ocurrieron las interacciones']
  id_usuario_sk integer [not null, ref: > dim_usuario.id_usuario_sk, note: 'Usuario que realizo la interaccion']
  id_documento_sk integer [not null, ref: > dim_documento.id_documento_sk, note: 'Documento con el que se interactuo']
  id_tipo_interaccion integer [not null, ref: > dim_tipo_interaccion.id_tipo_interaccion, note: 'Tipo de accion realizada (visualizacion, descarga, etc.)']

  // Medidas
  cant_interacciones integer [not null, default: 1, note: 'Cantidad de veces que este usuario realizo esta accion sobre este documento en el dia']

  indexes {
    (fecha, id_usuario_sk, id_documento_sk, id_tipo_interaccion) [pk]
    fecha [name: 'idx_fact_interaccion_fecha']
    id_documento_sk [name: 'idx_fact_interaccion_doc']
  }
}



// =============================================================
// CONTROL ETL
// =============================================================

Table etl_watermark [headercolor: #4A4A4A] {
  tabla_origen varchar(100) [pk, note: 'Nombre de la tabla del sistema operativo que se esta sincronizando']
  ultimo_procesado timestamp [not null, note: 'Timestamp mas reciente de los registros ya cargados. Se usa como marca de agua para carga incremental']
  ultima_corrida timestamp [not null, note: 'Fecha y hora en que se ejecuto por ultima vez el proceso ETL para esta tabla']
}

// =============================================================
// TableGroups
// =============================================================

TableGroup hechos {
  fact_busqueda
  fact_interaccion_documento
}

TableGroup dimensiones {
  dim_tiempo
  dim_materia
  dim_rol
  dim_usuario
  dim_tipo_documento
  dim_documento
  dim_tipo_interaccion
}

TableGroup bridges {
  bridge_documento_autor
}

TableGroup control {
  etl_watermark
}
